@@ -1,4 +1,7 @@
 2006-05-02 David Brown <dmlb2000@gmail.com>
+        * info/patches/sws2_patches/suspend2-2.2.5-for-2.6.16.9.patch: added
+
+2006-05-02 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to patch-2.6.16-cks9
 	* info/patches/ck_server_patches/patch-2.6.16-cks9: added
 
